# rl-uavnetsim

./: .gitignore  PUBLISHING.md  README.md  implementation_plan3_5.md  pyproject.toml  requirements.txt
configs/marl/: eval_satellite.yaml  mappo_satellite.yaml  mappo_satellite_3uav_coverage.yaml  mappo_satellite_3uav_hotspot_hard.yaml  mappo_satellite_3uav_large_map.yaml  mappo_satellite_3uav_medium.yaml  mappo_satellite_3uav_sar_lowrate_balanced.yaml  mappo_satellite_3uav_sar_lowrate_coverage.yaml
docs/proposal/: proposal 0323v2.md
docs/reports/: 2026-04-13-satellite-demo-report-en.md  2026-04-13-satellite-demo-report-zh.md  2026-04-25-project-current-state-overview-zh.md  2026-04-25-relatedwork-disaster-uav-mappo-reading-notes-zh.md
rl_uavnetsim/: __init__.py  config.py  main.py  scenario.py
rl_uavnetsim/allocation/: __init__.py  pf_scheduler.py  resource_manager.py  user_association.py
rl_uavnetsim/channel/: __init__.py  a2a_channel.py  a2g_channel.py  backhaul_channel.py
rl_uavnetsim/energy/: __init__.py  energy_model.py
rl_uavnetsim/entities/: __init__.py  ground_base_station.py  ground_user.py  satellite.py  uav.py
rl_uavnetsim/environment/: __init__.py  sim_env.py
rl_uavnetsim/metrics/: __init__.py  metrics_collector.py
tests/: test_access_interference.py  test_allocation.py  test_channels.py  test_coverage_calibration.py  test_demo_runner.py  test_entities.py  test_gateway_routing.py  test_gateway_terminology.py  test_metrics_visualization.py  test_relay_env.py  test_rl_interface.py  test_training_evaluation.py  test_training_features.py
(+26 files in other folders)
