[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-uavnetsim"
version = "0.1.0"
description = "Step-based UAV network simulator for MARL research"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Havlight" },
]
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.24",
  "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["rl_uavnetsim*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
